--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
 }
 
 .profile {
+    margin-top: 350px;
     width: 350px;
     height: 350px;
     border-radius: 50%;
@@ -17,6 +18,7 @@ body {
     width: 100%;
     height: 100%;
     display: table;
+    margin-top: 250px;
     background: linear-gradient(#01ccff 0%, #0612be 50%, rgb(0, 250, 217));
 }
 
@@ -53,17 +55,27 @@ h2 {
 }
 .menu{
     list-style: none;
-    position: absolute;
-    top:10px;
-    right:30px;
+    position: fixed;
+    top:0px;
+    width:100%;
+    margin-top:0px;
+    background:white;
     z-index: 10;
-    cursor: pointer;
+    cursor: grab;
 }
 .links{
-    float:left;
+    display:inline;
     padding:5px 9px;
     font-size: 22px;
     font-family: 'Mukta', sans-serif;
     font-weight:bold;
 }
 .links:hover{background-color: rgb(173, 245, 245);}
+.contact1 h3{
+    display:inline
+}
+#writing a{
+    text-decoration: none !important;
+    font-size:25px; 
+    color:darkcyan;
+}
